# Player

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  xmake.lua
Player/: CMakeLists.txt
Player/include/player/: av_state.h  common.h  const.h  core.h  core_struct.h  demux.h  read_thread.h  video_thread.h
Player/src/: audio_thread.cpp  common.cpp  core.cpp  core_operation.cpp  demux.cpp  main.cpp  read_thread.cpp  video_thread.cpp
data/: data.aac  data.h264
data/gray_pics/: gray-1.pgm
include/player/: audio_thread.h  audio_thread.hpp  common.hpp  const.h  const.hpp  core.hpp  ffmpeg.hpp  mtx_queue.hpp  read_thread.hpp  video_thread.h  video_thread.hpp
src/: audio_thread.cpp  common.cpp  core.cpp  main.cpp  read_thread.cpp  video_thread.cpp
tests/: CMakeLists.txt  test.cpp  test_fmt.cpp  test_memory.cpp
tests/basics/: CMakeLists.txt
tests/basics/FFmpeg/: CMakeLists.txt  cut.cpp  encode_audio.cpp  encode_video.cpp  extract_aac_audio.cpp  extract_h264_video.cpp  gen_color_pics.cpp  gen_gray_pics.cpp  remux.cpp
tests/basics/FFmpeg-SDL/: CMakeLists.txt  pcm_player.cpp  simple_video_player.cpp  yuv_player.cpp
tests/basics/FFmpeg-SDL/video_audio_player/: CMakeLists.txt
tests/basics/FFmpeg-SDL/video_audio_player/v1/: CMakeLists.txt  main_v1.cpp
tests/basics/FFmpeg-SDL/video_audio_player/v1/include/v1/: av_state.h  packet_queue.h  proxy_element.h
tests/basics/SDL/: CMakeLists.txt  sdl_basic1.cpp  sdl_basic2.cpp
tests/sdl/: CMakeLists.txt  test_audio.cpp
