macro(add_exe_ffmpeg TARGET_NAME)
  add_executable(${TARGET_NAME} ${TARGET_NAME}.cpp)
  target_include_directories(${TARGET_NAME} PRIVATE ${FFMPEG_INCLUDE_DIRS})
  target_link_libraries(${TARGET_NAME} PRIVATE ${FFMPEG_LIBRARIES})
endmacro()

add_exe_ffmpeg(extract_aac_audio)
add_exe_ffmpeg(extract_h264_video)
add_exe_ffmpeg(remux)
add_exe_ffmpeg(cut)
add_exe_ffmpeg(encode_video)
add_exe_ffmpeg(encode_audio)
add_exe_ffmpeg(gen_gray_pics)
add_exe_ffmpeg(gen_color_pics)
